--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 ALLOWED_ORIGIN=http://localhost:3000
 SMTP_USER=dev.anukulchandra@gmail.com
-SMTP_PASS=9386@Anu
+SMTP_PASS=vgqm belc wsgw ekuy
 NOTIFY_EMAIL=dev.anukulchandra@gmail.com
 ADMIN_TOKEN=mYp0rtf0l10-s3cr3t-2025!
